protocolmodel/mcrl2/testing/errors/error_5004.mcf
% E5004 - Invalid peer info
[true* . LOG_ERROR(E5004)] false